Attempt to fix modal not showing up on iOS when added to home screen.

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -39,5 +39,8 @@ body {
     margin-top: 20px;
 }
 
-
+/* modal fix */
+body, .navbar-fixed-top, .navbar-fixed-bottom {
+    margin-right: 0 !important;
+}
 
